[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmalib"
version = "0.1.0"
description = "A minimal, transparent Python library for building agentic pipelines with local small language models"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aleksandr Karpov <alex.karpov@keyfour.tech>" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.25.0",
  "jinja2>=3.1.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.4.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://github.com/keyfour/llmalib"
Repository = "https://github.com/keyfour/llmalib"
Documentation = "https://llmalib.github.io"

[tool.hatch.build.targets.wheel]
packages = ["llmalib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=llmalib --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "W191", # indentation contains tabs
  "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
plugins = ["pydantic.mypy"]

